<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">AudioVideoRecordingSample</string>
  <string name="action_settings">Settings</string>

  <string name="action_posterize">Posterize</string>
  <string name="action_grayscale">Grayscale</string>
  <string name="action_art">Art</string>
  <string name="action_1977">1977</string>
  <string name="action_bloom">Bloom</string>
  <string name="action_tone_curve">Tone Curve</string>

</resources>
